# OPUS-via-Bunch-Kaufman-pivoting-and-standard-optimization

./: .gitignore  CMakeLists.txt  Makefile  README.md  demo.c  demo.cpp  opus.c  opus.cpp  opus.h  randomlhs.cpp  randomlhs.hpp  surrogate_benchmark.txt
LinearSolverBuild/: CMakeLists.txt
include/: LinearSolver.h  LinearSolver.hpp  blockbk.h  config.h  opus.h  randomlhs.hpp  surrogate.hpp  test_utils.h  tsc_x86.h
output/: baseline_flag_O1.txt  baseline_flag_O2.txt  baseline_flag_O3.txt  baseline_flag_O3_fastmath.txt  baseline_solver_d4.txt  block_opt_eval_opt_d4.txt  blocksize_cahchemiss.txt  blocksize_speedup.txt  eigenLU_solver_d4.txt  eigen_solver_d2.txt  eval_surr.txt  evaluate.txt  matrix_update.txt  optimized_flag_O1.txt  optimized_flag_O2.txt  optimized_flag_O3.txt  optimized_flag_O3_fastmath.txt  output2.txt
script/: baseline_optimized_compare.eps  baseline_step5.eps  blockingbk.jl  output.eps  output_5.eps  output_6b.eps  output_9.eps  output_baseline_solver_d4.eps  output_baseline_step6b.eps  output_baseline_step9.eps  output_block_opt_eval_opt_d4.txt.eps  output_block_opt_eval_opt_d4_5.eps  output_block_opt_eval_opt_d4_6b.eps  output_block_opt_eval_opt_d4_9.eps  output_cache_miss.eps  output_eval_surr.eps  output_matrix_update.eps  output_step5_flags_all.eps  output_step5_flags_part.eps  output_step6b_flags_all.eps  output_step6b_flags_part.eps  plot.ipynb  plot.py  plot_performance.ipynb  plot_roofline.ipynb  plot_step.ipynb
src/: LinearSolver  LinearSolver.cpp  blockbk.cpp  opus.cpp  randomlhs.cpp  surrogate.cpp  test_utils.cpp
src/LinearSolver.dSYM/Contents/: Info.plist
src/LinearSolver.dSYM/Contents/Resources/DWARF/: LinearSolver
surrogate/: CMakeLists.txt  surrogate.cpp
test/: demo.cpp  test_LinearSolver.cpp  test_blockbk.cpp  test_eval_surrogate copy.cpp  test_eval_surrogate.cpp  test_matrix_update.cpp  test_surrogate.cpp
test_matrix/: size5.txt
